force-app/main/default/objects/Opportunity/fields/Development_Project__c.field-meta.xml
<CustomField>
    <fullName>Development_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Is there a development project that needs to be approved in order to fulfill this opportunity?  Relate it.</inlineHelpText>
    <label>Development Project</label>
    <referenceTo>PDLM__Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>