force-app/main/default/objects/Opportunity/fields/Finish_Date_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Finish_Date_Roll_up__c</fullName>
    <formula>TEXT(Development_Project__r.PDLM__Due_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finish Date Roll-up</label>
    <type>Text</type>
</CustomField>