force-app/main/default/objects/Opportunity/fields/Project_Kick_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Kick_Off_Date__c</fullName>
    <formula>Development_Project__r.Kickoff_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Kick Off Date</label>
    <type>Date</type>
</CustomField>