force-app/main/default/objects/Opportunity/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <formula>TEXT(Development_Project__r.Phase_pk__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Phase</label>
    <type>Text</type>
</CustomField>