force-app/main/default/objects/Opportunity/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <formula>TEXT(Development_Project__r.PDLM__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the project currently on track?</inlineHelpText>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>