force-app/main/default/objects/Opportunity/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <label>RSM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MICHAEL HAMMOND</fullName>
            </value>
            <value>
                <fullName>OLD DOMINION LIGHTING</fullName>
            </value>
            <value>
                <fullName>JOHN DEININGER</fullName>
            </value>
            <value>
                <fullName>JAMES KEENLEY</fullName>
            </value>
            <value>
                <fullName>PATRICK BROCKAMP</fullName>
            </value>
            <value>
                <fullName>DONNA BAILEY</fullName>
            </value>
            <value>
                <fullName>JOHN DALTON</fullName>
            </value>
            <value>
                <fullName>SPECTRUM HULETT GROUP</fullName>
            </value>
            <value>
                <fullName>GRAY WHITNEY</fullName>
            </value>
            <value>
                <fullName>STEVE MARTIN</fullName>
            </value>
            <value>
                <fullName>BLAKE ELLESTAD</fullName>
            </value>
            <value>
                <fullName>JEFF REISS</fullName>
            </value>
            <value>
                <fullName>JOE GALLO</fullName>
            </value>
            <value>
                <fullName>RICHARD ALAN</fullName>
            </value>
            <value>
                <fullName>ROBERT ESKIN</fullName>
            </value>
            <value>
                <fullName>RYAN DAVIDSON</fullName>
            </value>
            <value>
                <fullName>PAUL CONNOR</fullName>
            </value>
            <value>
                <fullName>DAVE SORENSON</fullName>
            </value>
            <value>
                <fullName>JAMES KEENLEY/ED</fullName>
            </value>
            <value>
                <fullName>FRANCIS POLLART</fullName>
            </value>
            <value>
                <fullName>RYAN CARLTON</fullName>
            </value>
            <value>
                <fullName>MICHEL KADOCHE</fullName>
            </value>
            <value>
                <fullName>JOHN MONKOWSKI</fullName>
            </value>
            <value>
                <fullName>ROBERT WEBB</fullName>
            </value>
            <value>
                <fullName>MATT CARLTON</fullName>
            </value>
            <value>
                <fullName>CLAIRE SCOTT</fullName>
            </value>
            <value>
                <fullName>RICHARD BROWN</fullName>
            </value>
            <value>
                <fullName>KURT LEMBKE</fullName>
            </value>
            <value>
                <fullName>HOUSE OEM ACCTS</fullName>
            </value>
            <value>
                <fullName>RANDY ROBERT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>