force-app/main/default/objects/Opportunity/fields/Total_Quotes_by_Customer_Won__c.field-meta.xml
<CustomField>
    <fullName>Total_Quotes_by_Customer_Won__c</fullName>
    <description>Total Value of all Quotes to date by Customer Closed Won</description>
    <inlineHelpText>Total Value of all Quotes to date by Customer Closed Won</inlineHelpText>
    <label>Total Quotes by Customer - Won</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>