force-app/main/default/objects/Opportunity/fields/ywr__Close_Month__c.field-meta.xml
<CustomField>
    <fullName>ywr__Close_Month__c</fullName>
    <formula>IF( 
 TODAY() &gt; CloseDate, &quot;&quot;,
IF(
 AND( YEAR(TODAY()) = YEAR(CloseDate), MONTH(TODAY()) = MONTH(CloseDate)), &quot;This Month&quot;,
IF(
 AND( YEAR(TODAY()) = YEAR(CloseDate), MONTH(TODAY()) + 1 = MONTH(CloseDate)), &quot;Next Month&quot;,
IF(
 AND( YEAR(TODAY()) + 1 = YEAR(CloseDate), MONTH(TODAY()) = 12, MONTH(CloseDate) = 1), &quot;Next Month&quot;,
&quot;Future&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Month</label>
    <type>Text</type>
</CustomField>