force-app/main/default/objects/Opportunity/fields/ywr__Date_last_Inbound__c.field-meta.xml
<CustomField>
    <fullName>ywr__Date_last_Inbound__c</fullName>
    <label>Date last Inbound</label>
    <type>Date</type>
</CustomField>