force-app/main/default/objects/Opportunity/fields/ywr__Date_last_outbound__c.field-meta.xml
<CustomField>
    <fullName>ywr__Date_last_outbound__c</fullName>
    <label>Date last outbound</label>
    <type>Date</type>
</CustomField>