force-app/main/default/objects/Opportunity/fields/ywr__Date_since_last_inbound__c.field-meta.xml
<CustomField>
    <fullName>ywr__Date_since_last_inbound__c</fullName>
    <formula>IF( ISBLANK( ywr__Date_last_Inbound__c ), NULL, Today() - ywr__Date_last_Inbound__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date since last inbound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>