force-app/main/default/objects/Opportunity/fields/ywr__Date_Since_Last_Outbound__c.field-meta.xml
<CustomField>
    <fullName>ywr__Date_Since_Last_Outbound__c</fullName>
    <formula>IF( ISBLANK( ywr__Date_last_outbound__c ), NULL, Today() - ywr__Date_last_outbound__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Since Last Outbound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>