force-app/main/default/objects/Opportunity/recordTypes/Builder.recordType-meta.xml
<RecordType>
    <fullName>Builder</fullName>
    <active>true</active>
    <businessProcess>Builder Opportunities</businessProcess>
    <label>Builder</label>
</RecordType>