force-app/main/default/objects/Opportunity/recordTypes/Job.recordType-meta.xml
<RecordType>
    <fullName>Job</fullName>
    <active>true</active>
    <businessProcess>Job Opportunities</businessProcess>
    <label>Job</label>
</RecordType>